# PyWeave

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: python-runtime-matrix.yml
scripts/: check-dev-env.mjs  run-backend-tests.mjs  run-e2e.mjs  smoke-trace-worker.mjs
src/: App.tsx  FlowNodes.tsx  PlayerControls.tsx  PythonEditor.tsx  TemplatePicker.tsx  TracePanes.tsx  flowModel.test.ts  flowModel.ts  formatValue.test.ts  formatValue.ts  i18n.ts  main.rs  main.tsx  player.css  python_runner.rs  python_value.rs  styles.css  teaching.test.ts  teaching.ts  templates.ts  traceSemantics.test.ts  traceSemantics.ts  tracer.rs  types.ts  useTraceSession.ts  valuePreview.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  python_policy.rs  python_runner.rs  python_value.rs  trace_worker.rs  tracer.rs
tests/e2e/: visualization.spec.ts
